--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
 
 <body>
 
-<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.js"></script>
-<script src="app.js"></script>
+  
+  <form action="">
+    <input type="text" name="search" id="search">
+    <button id="submit">Search</button>
+  </form>
+  <button id="remove">
+    Remove All Gifs
+  </button>
+  <div id="gifs">
+
+  </div>
+
+
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
